--- a/frontend/src/core/components/Chains/Chains.scss
+++ b/frontend/src/core/components/Chains/Chains.scss
@@ -41,7 +41,7 @@
     .body {
       margin-left: -20px;
       padding-left: 0;
-      max-height: 50vh;
+      //max-height: 50vh;
 
       .app-table {
         margin-top: -15px;
