--- a/frontend/src/views/Apps/TierSelection/TierSelection.scss
+++ b/frontend/src/views/Apps/TierSelection/TierSelection.scss
@@ -1,85 +1,48 @@
 @import "../../../scss/Core.scss";
 
 
-.app-modal {
-  min-height: 800px !important;
-  margin-top: 0 !important;
+.modal-dialog {
+  .modal-content {
+    padding: 30px 20px !important;
 
-  .modal-dialog {
-    max-width: 948px !important;
-
-
-    background-color: $dark-blue;
-    border-radius: 10px;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-    padding: 0 40px;
-
-    .modal-content {
-      background-color: $dark-blue;
-
-      .modal-title {
-        text-transform: uppercase;
-        font-family: $secondary-font-family;
-        color: $primary-color;
-        font-size: 22px;
-        font-weight: 800;
-        line-height: 1;
-      }
-
-      .close {
-        position: relative;
-        top: -40px;
-        right: -60px;
+    .modal-body {
+      p,
+      a {
         opacity: 1;
+        font-family: $primary-font-family;
+        font-size: 16px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.81;
+        letter-spacing: -0.44px;
+        text-align: justify;
         color: white;
-
-        span {
-          font-size: 25pt;
-          font-weight: lighter;
-        }
       }
 
-      .modal-body {
-        width: 848px;
-        height: 522px;
-
-        p,
-        a {
-          opacity: 1;
-          font-family: $primary-font-family;
-          font-size: 16px;
-          font-weight: 300;
-          font-stretch: normal;
-          font-style: normal;
-          line-height: 1.81;
-          letter-spacing: -0.44px;
-          text-align: justify;
-          color: white;
-        }
-
-        a {
-          text-decoration: underline;
-          font-weight: bold;
-          letter-spacing: -0.64px;
-          color: $primary-color;
-        }
-
-        p {
-          margin-bottom: 20px;
-        }
-
-        b {
-          font-weight: bold;
-        }
+      a {
+        text-decoration: underline;
+        font-weight: bold;
+        letter-spacing: -0.64px;
+        color: $primary-color;
       }
-    }
 
-    .modal-footer {
-      padding-top: 30px;
-      justify-content: flex-start;
+      p {
+        margin-bottom: 20px;
+      }
+
+      b {
+        font-weight: bold;
+      }
     }
   }
+
+  .modal-footer {
+    padding-top: 30px;
+    justify-content: flex-start;
+  }
 }
+
 
 .tier-selection {
   max-height: 50vh;
