--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -398,12 +398,17 @@ button {
 
   &.hide {
     thead {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
+      // display: table;
+      // width: 100%;
+      // table-layout: fixed;
 
       text-transform: uppercase;
       color: black;
+
+      th {
+      border-bottom: none;
+      border-top-color: transparent;
+    }
     }
 
     .show-icon {
@@ -413,14 +418,9 @@ button {
     }
 
     tbody {
-      display: none;
-    }
-  }
-
-  &.empty {
-    thead th {
-      border-bottom: none;
-      border-top-color: transparent;
+      visibility: hidden;
+      display: absolute;
+      height: 0px;
     }
   }
 
@@ -434,7 +434,7 @@ button {
 
   .show-icon {
     .icon {
-      width: 15px;
+      width: 10px;
       cursor: pointer;
       transform: rotate(180deg);
     }
