--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -26,7 +26,7 @@
 
   .body {
     box-shadow: $default-box-shadow;
-    padding: 5px 10px 15px 30px;
+    padding: 5px 10px 0 30px;
     border-radius: $table-radius;
     margin-bottom: 10px;
   }
@@ -35,5 +35,6 @@
   &.scroll .body {
     overflow-x: auto;
     max-height: 60vh;
+    padding-bottom: 5px;
   }
 }
