--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -310,6 +310,8 @@ button {
 }
 
 .app-table {
+  margin-bottom: 0;
+  box-shadow: $default-box-shadow;
 
   input[type="checkbox"] {
     margin-left: -32px;
@@ -320,6 +322,7 @@ button {
   thead {
     text-transform: uppercase;
     color: black;
+    height: 50px;
 
     th {
       margin-top: -10px;
@@ -327,9 +330,10 @@ button {
       border-bottom: $border-bottom;
       font-family: $table-header-font-family;
       color: $table-header-font-color;
-      font-size: 12px;
+      font-size: 14px;
       font-weight: bold;
       letter-spacing: -0.33px;
+      padding-bottom: 14px;
     }
 
     th:focus {
@@ -370,7 +374,8 @@ button {
 
     tbody {
       display: block;
-      height: 60vh;
+      height: auto;
+      max-height: 60vh;
       overflow: scroll;
     }
   }
@@ -401,6 +406,10 @@ button {
   }
 
   &.flex-body {
+    thead tr {
+      padding-top: 13px;
+    }
+
     tbody {
       tr {
         display: flex;
@@ -505,7 +514,7 @@ button {
   }
 }
 
-.scroll {
+.scrollable {
   overflow-x: auto;
   max-height: 60vh;
 }
