--- a/frontend/src/views/Apps/AppsMain/AppsMain.scss
+++ b/frontend/src/views/Apps/AppsMain/AppsMain.scss
@@ -32,6 +32,12 @@
     }
   }
 
+  .app-table {
+    &.loading {
+      margin-bottom: 20px;
+    }
+  }
+
 
   .app-tables {
     margin-left: -25px;
