--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -197,8 +197,10 @@ input {
   }
 
   .icon {
-    width: 36px;
-    height: 31px;
+    min-width: 40px;
+    min-height: 40px;
+    max-width: 140px;
+    max-height: 140px;
     margin-right: 5px;
   }
 }
@@ -317,6 +319,12 @@ button {
     margin-left: -32px;
     width: 18px;
     height: 18px;
+
+    &::before {
+      opacity: 1;
+      margin-left: -2px;
+      margin-top: -2px;
+    }
   }
 
   thead {
@@ -647,8 +655,6 @@ input[type="radio"] {
 
     &::before {
       opacity: 1;
-      margin-left: -2px;
-      margin-top: -2px;
     }
 
     ~label::before {
