--- a/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
+++ b/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
@@ -2,36 +2,90 @@
 
 #order-summary {
 
+  h1 {
+    text-transform: uppercase;
+    font-family: $secondary-font-family;
+    color: $secondary-color;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 1.27;
+    letter-spacing: -0.82px;
+  }
+
+  h2.sub {
+    text-transform: uppercase;
+    font-family: $secondary-font-family;
+    color: $secondary-color;
+    font-size: 22px;
+    font-weight: 700;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.5;
+    letter-spacing: normal;
+  }
+
+  h5 {
+    font-family: $primary-font-family;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: -0.38px;
+    color: $primary-color;
+  }
+
+  .agree {
+    font-family: $primary-font-family;
+    font-size: 14px;
+    color: $dark-gray;
+
+    &,
+    a {
+      font-weight: 300;
+    }
+  }
+
   .cards {
     height: 25vh;
     overflow-x: auto;
   }
 
   .p-badge {
-    background-color: $dark-blue;
+    background-color: #06202e;
     border-radius: 15px;
     margin: 0;
 
     h2 {
-      font-size: 2.2em;
+      font-family: $primary-font-family;
+      font-size: 30px;
+      font-weight: bold;
+      letter-spacing: -0.82px;
+      text-align: center;
+      color: $primary-color;
     }
 
     p {
       color: white;
+      font-size: 16px;
     }
   }
 
   .order {
-    padding-left: 30px;
+    padding-left: 15px;
 
     .item {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 25px;
+
+      p {
+        margin-bottom: 10px;
+      }
 
       p:first-of-type {
-        color: $dark-gray;
+        font-family: $primary-font-family;
+        font-size: 16px;
+        font-weight: 300;
+        letter-spacing: -0.38px;
+        color: #888888;
       }
 
       p:last-of-type {
@@ -72,4 +126,7 @@
     border-bottom: unset;
   }
 
+  .confirm {
+    width: auto;
+  }
 }
