--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -319,12 +319,6 @@ button {
     margin-left: -32px;
     width: 18px;
     height: 18px;
-
-    &::before {
-      opacity: 1;
-      margin-left: -2px;
-      margin-top: -2px;
-    }
   }
 
   thead {
@@ -623,8 +617,11 @@ textarea.form-control::placeholder {
 input[type="checkbox"],
 input[type="radio"] {
   position: relative;
-  width: 1.6em;
-  height: 1.6em;
+  width: 1.4em;
+  height: 1.4em;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   color: $black;
   border: 1px solid $light-gray;
   border-radius: 4px;
@@ -634,13 +631,9 @@ input[type="radio"] {
   transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 
   &::before {
-    position: absolute;
     content: '';
-    display: block;
-    top: 2px;
-    left: 7px;
-    width: 8px;
-    height: 14px;
+    height: 70%;
+    width: 45%;
     border-style: solid;
     border-color: $white;
     border-width: 0 2px 2px 0;
@@ -660,51 +653,16 @@ input[type="radio"] {
     ~label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
+
   }
 }
 
 input[type="radio"] {
   border-radius: 50%;
-}
 
-#general {
-  box-shadow: $default-box-shadow;
-
-  .body {
-    padding-bottom: 100px;
+  &::before {
+    opacity: 0 !important;
   }
-
-  h1 {
-    color: $dark-gray;
-    margin-bottom: 85px;
-  }
-}
-
-.dropdown-menu.show {
-  margin-top: 1px;
-  border-radius: $cta-panel-radius;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.24);
-  background-color: white;
-
-  .dropdown-item {
-    font-family: $primary-font-family;
-    font-size: 12px;
-    font-weight: 300;
-    color: #282828;
-
-    .icon {
-      color: $primary-color;
-      margin-right: 15px;
-      width: 16px;
-      height: 16px;
-    }
-  }
-
-  .dropdown-item:active {
-    background-color: transparent;
-    border-color: transparent;
-  }
-
 }
 
 /* Custom scroll bar. Not supports in Firefox and IE */
