Changed p for span in LabelToggle. Changed AppNavbar padding. Removed unnecessary md, lg, xl from Col component in Dashboard view.

--- a/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
@@ -1,7 +1,7 @@
 @import "../../../../scss/Core.scss";
 
 .app-navbar {
-  padding: $navbar-padding;
+  padding: 0 50px;
   background-color: $navbar-color;
   display: flex;
   flex-direction: row;
