Changed DefaultLayout component and styles. Changed AppNavbar component and styles. Changed InfoCard component and styles. Core.scss fixes. Fixing Dashboard styles.

--- a/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
@@ -1,6 +1,7 @@
 @import "../../../../scss/Core.scss";
 
 .app-navbar {
+  width: 100%;
   padding: 0 50px;
   background-color: $navbar-color;
   display: flex;
