--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -1,8 +1,6 @@
 @import "../../scss/Core";
 
 #dashboard {
-
-
   .cta-buttons {
     * {
       margin-left: 10px;
@@ -32,7 +30,6 @@
         display: none;
       }
 
-
       .dropdown-item:hover {
         background-color: transparent;
       }
@@ -44,9 +41,17 @@
     display: flex;
     flex-direction: row;
 
-    * {
-      margin-left: 6px;
-      margin-right: 6px;
+    .stat-column {
+      min-width: 168px;
+      padding: 0 6px;
+
+      &:first-child {
+        padding-left: 0;
+      }
+
+      &:last-child {
+        padding-right: 0;
+      }
     }
   }
 
