Removed padding left and right from .app-segment .body

--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -25,7 +25,7 @@
   }
 
   .body {
-    padding: 5px 10px 0 30px;
+    padding: 5px 0 0 0;
     border-radius: $table-radius;
     margin-bottom: 10px;
   }
