--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -5,8 +5,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 25px;
-    padding-bottom: 5px;
 
     .title {
       font-family: $default-segment-font;
@@ -15,8 +13,12 @@
       line-height: 2.11;
       letter-spacing: -0.49px;
       color: $secondary-color;
-      margin-left: 45px;
+      margin-left: 21px;
       text-transform: uppercase;
+    }
+
+    h2 {
+      margin-bottom: 0;
     }
 
     .app-dropdown {
@@ -25,8 +27,7 @@
   }
 
   .body {
-    padding: 5px 0 0 0;
-    border-radius: $table-radius;
+    margin-top: 5px;
     margin-bottom: 10px;
   }
 
