--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -2,27 +2,28 @@
 
 #dashboard {
   .cta-buttons {
-    * {
-      margin-left: 10px;
-    }
-
     .dropdown.cta {
       button {
         width: 80px;
         height: 33px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
 
         span {
-          position: relative;
-          top: -3px;
-          left: -14px;
           font-family: $primary-font-family;
           font-size: 13px;
+          line-height: 31px;
 
           svg {
             color: white;
             margin-left: 5px;
             font-size: 8px;
           }
+        }
+
+        &:focus {
+          box-shadow: none;
         }
       }
 
@@ -57,10 +58,21 @@
 
   .network-status-tables {
     margin-top: 50px;
-    margin-right: -10px;
 
     .network-status-table {
-      padding-left: 0;
+      padding: 0;
+    }
+
+    .network-status-tables-row {
+      .network-status-table {
+        &:nth-child(odd) {
+          padding-right: 7px;
+        }
+
+        &:nth-child(even) {
+          padding-left: 7px;
+        }
+      }
     }
   }
 }
