--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -1,13 +1,11 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "Variables/All";
 
-
 @mixin bordered-layout {
   border: 2px solid $primary-color;
   padding: 10px 30px 7px 30px;
   border-radius: $default-border-radius;
 }
-
 
 // TODO: Review these values.
 // Headers
@@ -74,7 +72,6 @@
     letter-spacing: -0.44px;
     color: $secondary-color;
   }
-
 }
 
 // Paragraphs, Labels, Links
@@ -153,7 +150,7 @@ form {
 .btn-primary:focus,
 .btn-outline-primary:active,
 .btn-primary:active,
-.show>.btn-primary.dropdown-toggle,
+.show > .btn-primary.dropdown-toggle,
 .btn-primary:not(:disabled):not(.disabled):active {
   background-color: $primary-color-darker;
   border-color: $primary-color-darker;
@@ -176,23 +173,37 @@ input {
 }
 
 .alert {
+  min-height: 60px;
   font-family: $secondary-font-family;
   box-shadow: 0 6px 25px -8px rgba(6, 32, 46, 0.1);
   background-color: #07212f;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
+  padding: 0 20px 0 24px;
   border-color: $dark-blue;
   color: white;
   border-radius: 10px;
 
+  &.alert-primary {
+    button {
+      height: 100%;
+      padding: 0 !important;
+    }
+  }
+
   button.close {
     span {
-      left: 20px !important;
+      position: absolute;
+      top: 0;
+      right: 18px;
       color: white;
       font-size: 1.5em;
       font-weight: 300;
     }
+  }
+
+  h4 {
+    font-size: 1.125rem;
+    line-height: 60px;
+    margin-bottom: 0;
   }
 
   p {
@@ -309,7 +320,6 @@ label.form-label {
   }
 }
 
-
 button {
   height: 32px;
   width: 105px;
@@ -317,6 +327,10 @@ button {
   span {
     font-family: $primary-font-family;
     font-size: 12px;
+  }
+
+  &:focus {
+    box-shadow: none;
   }
 }
 
@@ -341,6 +355,7 @@ button {
     text-transform: uppercase;
     color: black;
     height: 50px;
+    margin-left: 22px;
 
     th {
       margin-top: -10px;
@@ -352,15 +367,20 @@ button {
       font-weight: bold;
       letter-spacing: -0.33px;
       padding-bottom: 14px;
+
+      &:first-child {
+        padding-left: 0;
+      }
     }
 
     th:focus {
       outline: none;
     }
-
   }
 
   tbody {
+    padding: 0 14px 0 22px;
+
     tr {
       color: gray;
     }
@@ -374,11 +394,14 @@ button {
       font-weight: 300;
       letter-spacing: -0.33px;
       overflow-wrap: anywhere;
+
+      &:first-child {
+        padding-left: 0;
+      }
     }
   }
 
   &.scroll {
-
     thead,
     tbody tr {
       display: table;
@@ -387,14 +410,16 @@ button {
     }
 
     thead {
-      width: calc(100% - 1em);
+      // 52px comes from 8px from the scroll, 22px from the wireframes and 22px from margin-left and ^px extra from padding-right 6px from tbody
+      width: calc(100% - 58px);
     }
 
     tbody {
       display: block;
       height: auto;
-      max-height: 60vh;
-      overflow: scroll;
+      max-height: 62vh;
+      overflow: auto;
+      padding-right: 6px;
     }
   }
 
@@ -463,7 +488,6 @@ button {
   margin-left: 45%;
 }
 
-
 .order-by {
   display: flex;
   align-items: baseline;
@@ -497,11 +521,10 @@ button {
 }
 
 .modal-dialog {
-
   .modal-content {
     background-color: $dark-blue;
     border-radius: 10px;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   }
 
   .modal-title {
@@ -580,7 +603,6 @@ textarea.form-control::placeholder {
   }
 }
 
-
 .divider {
   display: flex;
   flex-direction: row;
@@ -645,7 +667,7 @@ input[type="radio"] {
 
   &::before {
     position: absolute;
-    content: '';
+    content: "";
     display: block;
     top: 2px;
     left: 7px;
@@ -667,7 +689,7 @@ input[type="radio"] {
       opacity: 1;
     }
 
-    ~label::before {
+    ~ label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
   }
@@ -718,7 +740,6 @@ input[type="radio"] {
     background-color: transparent;
     border-color: transparent;
   }
-
 }
 
 /* Custom scroll bar. Not supports in Firefox and IE */
@@ -754,7 +775,6 @@ input[type="radio"] {
 ::-webkit-scrollbar-button {
   display: none;
 }
-
 
 //TODO: Remove when second release.
 .breadcrumb {
