--- a/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
+++ b/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
@@ -2,18 +2,37 @@
   margin-top: 35%;
 
   h1 {
-    color: #ffffff;
+    width: 254px;
+    height: 90px;
+    font-family: OpenSans;
+    font-size: 30px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
     line-height: 1;
-    margin-bottom: 25px;
-    font-weight: 700;
+    letter-spacing: normal;
+    color: #ffffff;
   }
 
   p {
     font-size: 14px;
     letter-spacing: -0.38px;
+    color: #ffffff;
+    font-family: Lato;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.43;
+    text-align: justify;
   }
 
   .row:last-of-type {
     padding-bottom: 350px;
+  }
+
+  .white {
+    width: 101px;
+    height: 41px;
+    object-fit: contain;
   }
 }
