Removed focus boc-shadow from buttons.

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -266,6 +266,10 @@ input {
   button {
     min-width: unset;
     padding: 0.2em 1.25rem;
+
+    &:focus {
+      box-shadow: none;
+    }
   }
 
   button:hover {
