Add node unjail and update client methods

--- a/frontend/src/scss/Views/Detail.scss
+++ b/frontend/src/scss/Views/Detail.scss
@@ -95,6 +95,16 @@
     margin-left: -30px;
   }
 
+  .unjail {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  .unjail:hover {
+    color: darken($color: #888888, $amount: 10%);
+  }
+
+  .unjail,
   .unstaking-time {
     margin-top: 5px;
     font-size: 0.75em;
