Modifiged stylesheets per suggestions

--- a/frontend/src/views/Auth/Login/Login.scss
+++ b/frontend/src/views/Auth/Login/Login.scss
@@ -1,18 +1,8 @@
+@import "../../../scss/Variables/Fonts";
+@import "../../../scss/Variables/";
+
 .center {
   padding: 0rem 1rem !important;
-}
-
-h2 {
-  width: 93px;
-  height: 38px;
-  font-family: OpenSans;
-  font-size: 30px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.27;
-  letter-spacing: -0.82px;
-  color: #25a9e0;
 }
 
 .inputControl {
@@ -32,7 +22,7 @@ h2 {
   width: 195px !important;
   height: 32px !important;
   border-radius: 31px;
-  background-color: #474747;
+  background-color: $dark-gray;
 }
 
 .containerDiv {
