--- a/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
+++ b/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
@@ -1,10 +1,12 @@
+@import "../../../scss/Variables/Fonts";
+
 #auth-sidebar {
   margin-top: 35%;
 
   h1 {
     width: 254px;
     height: 90px;
-    font-family: OpenSans;
+    font-family: $secondary-font-family;
     font-size: 30px;
     font-weight: bold;
     font-stretch: normal;
@@ -18,7 +20,7 @@
     font-size: 14px;
     letter-spacing: -0.38px;
     color: #ffffff;
-    font-family: Lato;
+    font-family: $primary-font-family;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
