Fixed styles for General Apps Information (AppMain.js)

--- a/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
+++ b/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
@@ -18,6 +18,7 @@
     span {
       @include font-style($user-login-font);
       color: map_get($user-login-font, color);
+      line-height: 30px;
 
       text-transform: uppercase;
       margin-right: 8px;
