--- a/frontend/src/views/Apps/AppsMain/AppsMain.scss
+++ b/frontend/src/views/Apps/AppsMain/AppsMain.scss
@@ -1,7 +1,6 @@
 @import "../../../scss/Core";
 
 .app-main {
-
   .page-title {
     h1 {
       color: $title-secondary-color;
@@ -9,16 +8,19 @@
   }
 
   .stats {
-    margin-left: -25px;
-
-    .p-badge {
-      height: 100px;
+    .info-card-column {
+      padding: 0 9px;
+      &:first-child {
+        padding-left: 0;
+      }
     }
+  }
 
+  a:hover {
+    text-decoration: none;
   }
 
   .cta-buttons {
-    margin-left: -20px;
     margin-bottom: 20px;
 
     .create-app-button {
@@ -38,11 +40,7 @@
     }
   }
 
-
   .app-tables {
-    margin-left: -25px;
-    margin-top: -30px;
-
     .search-panel {
       margin-top: 20px;
       margin-bottom: -10px;
@@ -60,13 +58,13 @@
       display: none;
     }
 
-    .app-segment {
-      .head {
-        margin-bottom: -10px;
-      }
-    }
-
     .my-apps-segment {
+      padding: 0 9px;
+
+      &:first-child {
+        padding-left: 0;
+      }
+
       .app-segment {
         .head {
           h2 {
