Fixed missing Colors.scss reference

--- a/frontend/src/views/Auth/Login/Login.scss
+++ b/frontend/src/views/Auth/Login/Login.scss
@@ -1,5 +1,5 @@
 @import "../../../scss/Variables/Fonts";
-@import "../../../scss/Variables/";
+@import "../../../scss/Variables/Colors";
 
 .center {
   padding: 0rem 1rem !important;
